<resources>
    <string name="splash_screen_title1">"Русско - Английский"</string>
    <string name="splash_screen_title2">"Словарь"</string>
    <string name="app_name">"LexiVerse"</string>
    <string name="error_textview_stub">Ошибка</string>
    <string name="enter_word">Введите слово</string>
    <string name="search_space">Область поиска</string>
    <string name="dark_theme">Dark theme</string>
    <string name="search_word">Искать слово</string>
    <string name="looking_for">Ищем</string>
    <string name="header">Заголовок</string>
    <string name="transcription">[транскрипция]</string>
    <string name="error_stub">Ошибка</string>
    <string name="reload_button">Перегрузить</string>
    <string name="undefined_error">Неопределённая ошибка</string>
    <string name="empty_server_response_on_success">Не можем найти слово</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="no_word_in_history">Не можем найти слово в истории</string>
    <string name="button_search">Искать слово в истории</string>
    <string name="search_hint">Введите слово</string>
    <string name="delete_description">X</string>
    <string name="image_stub">Рисунок</string>
    <string name="dialog_button_cancel">OK</string>
    <string name="dialog_title_stub">Неопределённая ошибка</string>
    <string name="dialog_title_device_is_offline">Нет интернет соединения</string>
    <string name="dialog_message_device_is_offline">Вы не можете использовать словарь
        без интернет соединения</string>
    <string name="dialog_tittle_sorry">Извините</string>
    <string name="pronounce">Произношение</string>
    <string name="empty_string">Пустая строка</string>
    <string name="favorite">Избранное</string>
    <string name="favorites">ИЗБРАННОЕ</string>
    <string name="find_in_history">Найти в истории</string>
    <string name="translation">перевод</string>
    <string name="empty_list_for_widget">Список пуст, или нажмите для обновления</string>
    <string name="start_main_activity">Запустить приложение</string>
    <string name="learn">Учим</string>
    <string name="the_best">Избранное</string>
    <string name="progress">Успеваемость</string>
    <string name="Settings">Настройки</string>
    <string name="registration">Регистрация</string>
    <string name="settings_notification">Настройки уведомления</string>
    <string name="support">Написать в поддержку</string>
    <string name="choosing_theme">Выбор темы</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="enter_exit">Выйти</string>
    <string name="about_application">О Приложении</string>
    <string name="title_settings">Настройки</string>

    <string name="registrate">Зарегистрировать</string>
    <string name="first_notification_setting">Первая настройка нотификации</string>
    <string name="second_notification_setting">Вторая настройка нотификации</string>
    <string name="send_message">Написать в поддержку</string>
    <string name="send_message_to_developer">Послать письмо разработчику</string>
    <string name="e_mail">e-mail: dictionaryteam@mail.ru</string>
    <string name="first_theme">Первая тема</string>
    <string name="second_theme">Вторая тема</string>
    <string name="enter">Войти</string>
    <string name="exit">Выход</string>
    <string name="application_description">Приложение создано....</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="title_link">Ссылка на скачивание:</string>
    <string name="download_link">https://play.google.com/store/apps/details?id=com.diplomproject
    </string>
    <string name="button_send_sms">Послать SMS со ссылкой</string>
    <string name="for_sms">Приложение словарь: </string>
    <string name="message_were_sent">Сообщение отправлпено</string>
    <string name="enter_all_data">Пожалуйста введите все данные..</string>


    <!--bottom SettingsFragment-->
    <string name="dictionary">Словарь</string>
    <string name="learning_together">Учимся вместе</string>
    <string name="knowledge_check">Проверка знаний</string>

    <!-- bottom nav root menu -->
    <string name="root_menu">Меню</string>
    <string name="favorites_elements">Избранное</string>
    <string name="grade">Успеваемость</string>
    <string name="settings">Настройки</string>

    <!-- bottom nav menu - common usage-->
    <string name="delete_menu">Удалить</string>

    <!-- О приложении -->
    <string name="about_app">Команда разработчиков</string>
    <string name="cod_version">Код версии:</string>
    <string name="version">Версия:</string>

    <!-- Settings info -->
    <string name="version_code">Код версии: </string>
    <string name="version_name">Версии: </string>
    <string name="app_info">Команда разработчиков</string>

    <!-- Exception info -->
    <string name="fragment_exception">Такого фрагмента нет </string>
    <string name="example_absent">Примеров употребления нету</string>
    <string name="example">Пример</string>
    <string name="enter_email_reg">enter_email</string>
    <string name="enter_password">enter_password</string>
    <string name="set_time_delay">Установить задержку времени</string>
    <string name="delay">Задержка</string>
    <string name="show_notification_every">Показывать уведомления каждые</string>
    <string name="listen">Прослушать</string>
    <string name="to_application">В приложение</string>
    <string name="notificator_name">Dictionary</string>
    <string name="empty_list">Список избранных слов пуст</string>

    <string name="dear_user">Дорогой пользователь!</string>
    <string name="text_1">Благодарим вас за проявленный интерес к нашему приложению и за ваше желание поделиться своими мыслями и предложениями. Ваше мнение важно для нас, так как оно помогает сделать наше приложение еще лучше!</string>
    <string name="text_2">Если у вас есть какие-либо вопросы, замечания или пожелания, мы с удовольствием выслушаем каждое слово, которое вы хотите нам передать. Ваше содействие в улучшении нашего продукта — это неоценимый вклад, который будет вдохновлять нас двигаться вперед.</string>
    <string name="text_3">Спасибо, что выбрали наше приложение, и благодарим вас за доверие к нам. Мы стремимся создавать продукт, который отвечает вашим ожиданиям и делает ваш опыт использования незабываемым.</string>
    <string name="text_5">С наилучшими пожеланиями,</string>
    <string name="text_6">Команда разработчиков</string>
    <string name="support_e_mail">dictionaryteam@mail.ru</string>
    <string name="no_connection_internet">Нет соединения с интернетом</string>
    <string name="part_of_speach">Часть речи</string>
    <string name="listen_button">listen</string>
    <string name="login_button">login_button</string>
    <string name="email_hint">Почта</string>
    <string name="password_hint">Пароль</string>
    <string name="button_logIn">Войти</string>
    <string name="button_reg">Регистрация</string>
    <string name="profile_user_setting">Профиль</string>
    <string name="login_setting">Войти</string>
    <string name="notif_email">Уведомление по почте</string>
    <string name="notif_sms">Уведомление по смс</string>
    <string name="notif_word">Напоминания слов</string>
    <string name="share">Поделиться…</string>
    <string name="enter_word_search">Введите слово</string>
    <string name="favorites_dictionary">Избранное словарь</string>
    <string name="favorite_tests">Избранное тесты</string>
    <string name="copy_toast">Ссылка скопирована в буфер обмена</string>
    <string name="title_share">Вы можете поделиться нашим приложением одним из следующих способов:</string>
    <string name="title_downlink">Ссылкой на скачивание:</string>
    <string name="copy">Копировать</string>
    <string name="title_send_via_app">Отправить через приложение</string>
    <string name="subtitle_send_via_app">Нажмите кнопку \"Отправить\" и выберите приложение (например, мессенджер) через которое Вы хотите поделиться ссылкой на скачивание нашего приложения.</string>
    <string name="send">Отправить</string>
    <string name="title_send_SMS">Отправить SMS со ссылкой</string>
    <string name="subtitle_send_sms">При отправке SMS возможно списание денежных средств по условиям тарифного плана Вашего оператора сотовой связи</string>
    <string name="message_for_share_app">Перейдите по ссылке для скачивания приложения "Словарь RU/EN":</string>
    <string name="exit_message">Вы действительно хотите выйти из своего профиля?</string>
    <string name="note_welcome">Вы вошли как гость</string>
    <string name="welcome_text_settings">Здравствуйте, alex@mail.ru !</string>
    <string name="error_email_empty">Поле e-mail не должно быть пустым</string>
    <string name="error_password_empty">Поле пароль не должно быть пустым</string>
    <string name="error_match_password">Пароли должны совпадать!</string>
    <string name="confirm_polycy">Подтвердите свое согласие</string>
    <string name="registration_succesful">Успешная регистрация!</string>
    <string name="fail_registration">"Ошибка при регистрации: "</string>
    <string name="succesful_login">Успешный вход!</string>
    <string name="fail_login">"Ошибка входа: "</string>
    <string name="enter_email">Введите e-mail</string>
    <string name="enter_password_text">Введите пароль</string>
    <string name="enter_email_text">Введите e-mail</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="restriction_text">Превышено ограничение на ввод символов</string>
    <string name="message_for_app">Отправить SMS со ссылкой</string>
    <string name="noun">Имя существительное</string>
    <string name="verb">Глагол</string>
    <string name="adjective">Прилагательное</string>
    <string name="adverb">Наречие</string>
    <string name="pretext">Предлог</string>
    <string name="pronoun">Местоимение</string>
    <string name="cardinal_number">Количественное числительное</string>
    <string name="union">Союз</string>
    <string name="interjection">Междометие</string>
    <string name="article">Артикль</string>
    <string name="abbreviation">Аббревиатура</string>
    <string name="particle">Частица</string>
    <string name="serial_number">Порядковый номер</string>
    <string name="modal_verb">Модальный глагол</string>
    <string name="phrase">Фраза</string>
    <string name="idiom">Идиома</string>
    <string name="exception_error">The ViewModel should be initialised first</string>
    <string name="empty_string_message">Пустая строка</string>
    <string name="error_message">Ошибка</string>
    <string name="failed_to_read_value_message">Failed to read value.</string>

    // Galyaminsky
    <string name="FA_android_developers">Android Developers</string>
    <string name="FA_vasyl_dvorak">Vasyl Dvorak</string>
    <string name="FA_dvorak1981_yandex_ru">dvorak1981@yandex.ru</string>
    <string name="FA_pavel_nayya">Pavel Nayya</string>
    <string name="FA_naja19255_gmail_com">naja19255@gmail.com</string>
    <string name="FA_oleg_cusnir">Oleg Cusnir</string>
    <string name="FA_ocusnir_outlook_com">ocusnir@outlook.com</string>
    <string name="FA_artem_kovalev">Artem Kovalev</string>
    <string name="FA_npluzhnikovs_gmail_com">npluzhnikovs@gmail.com</string>
    <string name="FA_qa_engineer">QA Engineer</string>
    <string name="FA_daria_fomina">Daria Fomina</string>
    <string name="FA_darafomina13403_gmail_com">darafomina13403@gmail.com</string>
    <string name="FA_ux_ui_designer">UX / UI Designer</string>
    <string name="FA_yuriy_galyaminsky">Yuriy Galyaminsky</string>
    <string name="FA_jobforandroid_proton_me">jobforandroid@proton.me</string>
    <string name="FR_Politic">Политика конфиденциальности</string>
    <string name="FR_IAgree">Я Согласен</string>
    <string name="switch_on_notifications">Включить сообщения</string>
    <string name="to_favorite">В избранное</string>
</resources>
