<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient"
    android:padding="@dimen/widget_padding"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/play_articulation_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/baseline_volume_up_24"
            android:contentDescription="@string/pronounce" />

        <ImageButton
            android:id="@+id/start_main_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/baseline_keyboard_double_arrow_right_24"
            android:contentDescription="@string/start_main_activity" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/information_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/text_unit_layout_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_textview_widget"
                style="@style/HeaderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/header"
                android:textIsSelectable="true"
                tools:text="@string/header" />

            <TextView
                android:id="@+id/transcription_textview_widget"
                style="@style/TranscriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/transcription"
                tools:text="@string/transcription" />


            <TextView
                android:id="@+id/description_textview_widget"
                style="@style/BaseTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/translation"
                android:textIsSelectable="true"
                tools:text="@string/translation" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>