<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_starting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.root.StartingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dictionary_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dictionary"
            android:textSize="@dimen/default_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/learning_together_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/learning_together"
            android:textSize="@dimen/default_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/knowledge_check_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/knowledge_check"
            android:textSize="@dimen/default_text" />
    </LinearLayout>

</FrameLayout>