<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".view.settings.AboutAppFragment">

    <TextView
        android:id="@+id/about_app_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_about_app_dp"
        android:layout_marginEnd="@dimen/margin_about_app_dp"
        android:gravity="center"
        android:text="@string/about_app"
        android:textSize="@dimen/default_text"
        app:layout_constraintBottom_toTopOf="@+id/cod_version_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cod_version_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cod_version"
        android:textSize="@dimen/default_text"
        app:layout_constraintBottom_toTopOf="@+id/version_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_app_text_view" />

    <TextView
        android:id="@+id/version_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="@dimen/default_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cod_version_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>